--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
-    <title>doncheck</title>
+    <meta name="author" content="www.jiangyu.me"/>
+    <title>DON-UI - 高可用的Web UI 组件库</title>
   </head>
   <body>
     <div id="app"></div>
